2010-05-06  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* include/ProxySignatureByLocal.h: Use ProxySignatureByLocal in PrimitiveDMCS.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/BaseDMCS.h: Likewise.

2010-05-06  Minh Tran Dao  <dao@kr.tuwien.ac.at>

	* include/Neighbor.h: Use Neighbor instead of QueryPlan to
	get hostname and port
	* src/genTest.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/QueryPlan.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* include/QueryPlan.h: Likewise.
	* include/OptDMCS.h: Likewise.
	* include/Context.h: Likewise.
	* include/BridgeRulesBuilder.tcc: Likewise.
	* include/BridgeRulesBuilder.h: Likewise.
	* include/BaseDMCS.h (dmcs): Likewise.

	* src/OptDMCS.cpp: Use the right V at the right place.

2010-05-06  Dao Tran Minh  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Get neighbor_list from bridge rules parsing.

	* src/PrimitiveDMCS.cpp: Use neighbors from context.
	* src/OptDMCS.cpp: Likewise.

	* src/ContextGenerator.cpp: Adapt to neighbor_list.
	* src/genTest.cpp: Likewise.

	* include/Context.h: Let neighbor_list be a member of context.

	* include/ClaspResultGrammar.tcc: #if --> #ifdef

	* include/BridgeRulesBuilder.tcc: Update neighbor_list based on
	bridge atoms.

2010-05-05  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* include/QueryPlan.h: Replace Neighbors by NeighborList.
	* include/Signature.h: Replace Signatures by SignatureVec.
	* src/genTest.cpp: Likewise.
	* src/dmcsd.cpp): Likewise.
	* src/QueryPlan.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/Neighbor.h: Likewise.
	* include/Context.h: Likewise.
